syntax = "proto3";

package heartbeat;

service HeartbeatService {
  rpc Establish (stream Heartbeat) returns (stream Action) {}
}

message Heartbeat {
  string hostname = 1;
  int64 time = 2;
  int32 uptime = 3;
  int32 mem_free = 4;
  int32 mem_total = 5;
  int32 storage_free = 6;
  int32 storage_used = 7;
  int32 cpu_usage = 8;
}

message Action {
  string action = 1;
  string data = 2;
}
